--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -281,22 +281,71 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{center}
 
 \subsubsection{User Interface} %Sharon
+
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: UI1	&Status: ????\\[-3mm]
-	\multicolumn{2}{|c|}{\textbf{\large{User Interface Start Test}}}\\&\\\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Description: Start button is pressed to start the training session}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: SmartServe must be told to begin the session with a click of this button}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: SmartServe communicating with UI}\\[4mm]
-	\multicolumn{2}{|p{\textwidth}|}{Input: Mouse Event}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Session starts when button is clicked}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+	Test ID: UI1	&Status: Complete \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Display Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: All elements of UI are displayed in a window}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: UI displays when program is run}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions:N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Window opens with Welcome Screen}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: Window opens with Welcome Screen}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: Application running}\\\hline
 \end{tabular}
-\caption{User Interface Start Test}
+\caption{User Interface Display Test}
 \end{table}
 \end{center}
 
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI2	&Status: ???? \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Button Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: All buttons should do some action when pressed}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: When pressed, buttons change the state of the application and return }\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return true when button is pressed}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ??}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ??}\\\hline
+\end{tabular}
+\caption{User Interface Button Test}
+\end{table}
+\end{center}
+
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI3	&Status: ???? \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Mode Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Mode should be assigned when it is picked in a dropdown}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Mode variable assigned selected value}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return value selected }	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ??}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ??}\\\hline
+\end{tabular}
+\caption{User Interface Mode Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI3	&Status: ???? \\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Sign Up Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: When sign up button is pressed, user is added with given parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: User inputs are sent to Data Storage}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: Application UI is running}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return user parameters }	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ??}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ??}\\\hline 
+\end{tabular}
+\caption{User Interface Sign Up Test}
+\end{table}
+\end{center}
 
 \subsubsection{SmartServe}
 
