fixed some stuff

--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -116,7 +116,7 @@ The approach to testing will be to separate the subsystems as much as possible a
 \label{my-label}
 \begin{tabular}{|l|l|l|}
 \hline
-\multicolumn{3}{|c|}{\textbf{Testing Schedule}}  \\ \hline
+\multicolumn{3}{|c|}{\textbf{Testing Schedule}}  \\ \hline 
 \textbf{Task} & \textbf{Date} & \textbf{Notes} \\ \hline
 Complete Test Cases & February 13, 2018 & N/A \\ \hline
 Run Tests (First) & February 16, 2018 & N/A \\ \hline
@@ -135,7 +135,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV1	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ball detection Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module detects the ball}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: fails if false is returned while ball is in frame}\\[1mm]\hline&\\[-3mm]
@@ -151,7 +151,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV2	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ball upward detection Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module detects the ball moving upwards}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: fails if false is returned while ball is moving upwards }\\[1mm]\hline&\\[-3mm]
@@ -167,7 +167,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV3	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ball downward detection Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module detects the ball moving downwards}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: fails if false is returned while ball is moving downwards }\\[1mm]\hline&\\[-3mm]
@@ -183,7 +183,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV4	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ball rightward detection Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module detects the ball moving rightwards}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: fails if false is returned while ball is moving rightwards }\\[1mm]\hline&\\[-3mm]
@@ -199,7 +199,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV5	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ball leftward detection Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module detects the ball moving leftwards}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: fails if false is returned while ball is moving leftwards }\\[1mm]\hline&\\[-3mm]
@@ -215,7 +215,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV6	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{cvmodule timeout test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module correctly times out }\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: condition passes if fsm moves from state 1 to state 0 after 8 seconds}\\[1mm]\hline&\\[-3mm]
@@ -231,7 +231,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV7	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{fsm transition: state 1 to 2}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description:test if the fsm transitions to state 2 when ball is descending}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition:fsm transitions to state 2 when ball is descending }\\[1mm]\hline&\\[-3mm]
@@ -247,7 +247,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV8	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{fsm transition: state 2 to 3}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description:test if the fsm transitions from state 2 to state 3 when ball is ascending}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition:fsm transitions to state 3 when ball is ascending }\\[1mm]\hline&\\[-3mm]
@@ -263,7 +263,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV9	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{good signal test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description:test if the cvmodule sends a good signal to smartserve}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition:cvmodule successfully sends good signal when fsm is in state 3}\\[1mm]\hline&\\[-3mm]
@@ -279,7 +279,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: CV10	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{cvmodule timeout test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Test to see if cv module correctly times out }\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: condition passes if fsm moves from state 1 to state 0 after 8 seconds}\\[1mm]\hline&\\[-3mm]
@@ -334,7 +334,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommender receives a request for a shot.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The service generates a random shot.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The service is running on port 8080.}\\[4mm]
-	\multicolumn{2}{|p{\textwidth}|}{Input: a HTTP request with ``Random" as the mode parameter}\\[2mm]\hline
+	\multicolumn{2}{|p{\textwidth}|}{Input: an HTTP request with ``Random" as the mode parameter}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: a random shot which adheres to requirements}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
@@ -351,7 +351,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommender receives a request for a shot.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The service generates a shot.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The service is running on port 8080.}\\[4mm]
-	\multicolumn{2}{|p{\textwidth}|}{Input: a HTTP request with ``Train" as the mode parameter}\\[2mm]\hline
+	\multicolumn{2}{|p{\textwidth}|}{Input: an HTTP request with ``Train" as the mode parameter}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: a random shot which adheres to requirements}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
@@ -367,7 +367,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommender receives a status update for a shot.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The service changes the model in response.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The service is running on port 8080.}\\[4mm]
-	\multicolumn{2}{|p{\textwidth}|}{Input: a HTTP request with the shot id and returned boolean as parameters.}\\[2mm]\hline
+	\multicolumn{2}{|p{\textwidth}|}{Input: an HTTP request with the shot id and returned boolean as parameters.}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: the model is updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
 \end{tabular}
@@ -380,7 +380,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SM1	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel calculateYawAngle Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The calculateYawAngle method returns an accurate yaw angle in degrees.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns an angle in degrees accurate to a whole number.}\\[1mm]\hline&\\[-3mm]
@@ -396,7 +396,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SM2	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel calculateVelocity Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The calculateVelocity method returns an accurate velocity in meters/second.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns the velocity accurate to a whole number.}\\[1mm]\hline&\\[-3mm]
@@ -412,7 +412,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SM3	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel netHeightChecker Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: ThenetHeightChecker method checks whether the desired shot will pass over the net.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns the correct boolean indicating if the shot will pass over the net.}\\[1mm]\hline&\\[-3mm]
@@ -432,7 +432,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SR1	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShotRecommendation Connection Test - Pass}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommendation class will call the \textit{connect} method with port 8080 as a parameter.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method should return true.}\\[1mm]\hline&\\[-3mm]
@@ -448,7 +448,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SR2	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShotRecommendation Connection Test - Fail}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommendation class will call the \textit{connect} method with port 8090 as a parameter.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method should return false.}\\[1mm]\hline&\\[-3mm]
@@ -464,7 +464,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SR3	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShotRecommendation Request Shot - Random}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommendation class will call the \textit{getRecommendation} method with Random mode as a parameter.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method should a random shot of the form ``X=A.BC,Y=A.BC,V=A.BC,W=A.BC" where the values are within the requirements of the system.}\\[1mm]\hline&\\[-3mm]
@@ -480,7 +480,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \begin{center}
 \begin{table}[H]
 \begin{tabular}{|l r|}\hline&\\[-2mm]
-	Test ID: XXY	&Status: ????\\[-3mm]
+	Test ID: SR4	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{ShotRecommendation Request Shot - Train}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: The ShotRecommendation class will call the \textit{getRecommendation} method with Training mode as a parameter.}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method should a shot of the form ``X=A.BC,Y=A.BC,V=A.BC,W=A.BC" where the values are within the requirements of the system.}\\[1mm]\hline&\\[-3mm]
