--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -222,8 +222,8 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	Test ID: DS1	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Sign Up Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage receives user name and password to sign up}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: user table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: User table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The SQL database is running on port 3306.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: User table updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
@@ -239,7 +239,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Next Shot Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage returns a shot type for the system to execute}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: a specified desired zone the system must aim for is returned}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The SQL database is running on port 3306.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: Desired zone id as an integer}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return valid shot parameters, speed and angular velocity}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
@@ -254,10 +254,10 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	Test ID: DS3	&Status: ????\\[-3mm]
 	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Returned Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage received parameters for a successful or missed shot}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: returnrate table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Returnrate table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The SQL database is running on port 3306.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: Timestamp, user and shot ids}\\[2mm]\hline
-	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: returnrate table updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Returnrate table updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
 \end{tabular}
 \caption{Data Storage Returned Test}
@@ -271,7 +271,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Sign In Test}}}\\&\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage receives user name and password and authenticates it}\\[1mm]\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Returns accurate boolean value according to matching of user name and password}\\[1mm]\hline&\\[-3mm]
-	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The SQL database is running on port 3306.}\\[4mm]
 	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
 	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: True is returned if the password matches the user name, false if they do not match}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
 	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
