--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -425,6 +425,94 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{table}
 \end{center}
 
+\subsubsection{Shooting Mechanism}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC1	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Feeding Mechanism Rotation Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The feeding mechanism rotates by given amount in degrees.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The feeding mechanism rotates by given amount of degrees within a tolerance of 2 degrees.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The feeding mechanism is ready/powered on.}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Integer indicating the amount of degrees to be rotated.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Feeding mechanism rotates to the required position.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{Feeding Mechanism Rotation Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC2	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Shooting Control Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The shooting control shoots the ball via a rotating wheel at the requested power level to achieve the desired speed.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: ???}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The Shooting Control motor is powered on, and connected to the system.}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Integer between 0-100 indicating the power level of the shot.
+}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: ????}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{Shooting Control Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC3	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Four Position Roll Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The system rotates the Shooting Control to one of the four default positions.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Rotates to the indicated position.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: The Shooting Control motor is powered on, and connected to the system.
+}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Integer between 0-3 indicating the desired default position.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: The shooting control rotates to the requested default position.
+}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{Four Position Roll Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC4	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Adjustable Pitch Control Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The pitch control angles the shooting mechanism at the desired pitch level.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition:Rotate to the desired pitch level with a tolerance of 5 degrees.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input:Integer between -15 deg to 45 deg indicating pitch angle.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Rotate to the desired pitch level with a tolerance of 5 degrees.
+}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{Adjustable Pitch Control Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: SMC5	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Panning Shooting Mechanism Across the Table}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Move the system to face the direction specified in degrees.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: System moved to desired position.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions:Panning stage is homed correctly before moving to the first location.}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input:Integer between 60 deg to 120 deg indicating where to point the shooter.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Moves to the desired position without going out of bounds.
+}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: When powered down, the system rotates to the home (0 degrees) position.}\\\hline
+\end{tabular}
+\caption{Panning Shooting Mechanism Test}
+\end{table}
+\end{center}
+
+
 \subsubsection{Data Storage}
 \subsubsection{User Interface}
 \subsubsection{SmartServe}
